Closed Bug 814171 Opened 13 years ago Closed 13 years ago

GLContext doesn't catch max texture size calls in fGetIntegerv

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: gw280, Assigned: gw280)

Details

Attachments

(1 file)

We artificially limit the maximum texture size on certain platforms (e.g. Intel on OS X), but if we call fGetIntegerv with GL_MAX_TEXTURE_SIZE, it reports the hardware limit, rather than our own.
Attachment #684169 - Flags: review?(jgilbert) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: