Bug 814171 - Intercept calls for maximum texture/framebuffer sizes in GLContext::fGetIntegerv r=jgilbert